--- a/index.html
+++ b/index.html
@@ -1,85 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--link a bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <!--google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
-        <!--link animatecss-->
-        <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <!--link aos style-->
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <!--link al css-->
-        <link rel="stylesheet" href="css/style.css">
-        <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
-        <title>La Vela Puerca Oficial</title>
-    </head>
-    <body class="body">
-        <header>
-            <div class="nav">
-                <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--link a bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap"
+        rel="stylesheet">
+    <!--link animatecss-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--link aos style-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--link al css-->
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
+    <title>La Vela Puerca Oficial</title>
+</head>
+
+<body class="body">
+    <header>
+        <div class="nav">
+            <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                        aria-labelledby="offcanvasDarkNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
+                                <a class="navbar-brand" href="index.html"><img src="assets/logo-white.png"
+                                        width="40px"></a>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page"
+                                        href="pages/discografia.html">Discografía</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="pages/galeria.html">Galería</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="pages/shows.html"
+                                        style="color:#fbfb08">Shows</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="pages/bio.html">Bio</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="offcanvas-body">
-                <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
-                    <a class="navbar-brand" href="index.html"><img src="assets/logo-white.png" width="40px"></a>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages/discografia.html">Discografía</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages/galeria.html">Galería</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages/shows.html" style="color:#fbfb08">Shows</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages/bio.html">Bio</a>
-                    </li>
-                </ul>
-                </div>
-                </div>
-                </div>
-                </nav>
-            </div>
-        </header>
-        <main class="main">
-            <section class="bandacompleta">
-                <img src="assets/bandacompleta-min.jpg">
-                <h1 class="animate__animated animate__bounceInDown">La Vela Puerca</h1>
-            </section>
-            <h2>Escuchá Discopatico</h2>
-            <section class="discopaticoindex">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0" width="100%" height="400" frameBorder="10" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" data-aos="fade-up"></iframe>
-            </section>
-        </main>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <section class="bandacompleta">
+            <img src="assets/bandacompleta-min.jpg">
+            <h1 class="animate__animated animate__bounceInDown">La Vela Puerca</h1>
+        </section>
+        <div class="escuchaindex">
+            <h2 class="animate__animated animate__bounceIn animate__repeat-2">Escuchá Discopatico</h2>
+        </div>
+        <section class="discopaticoindex">
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0"
+                width="100%" height="400" frameBorder="10" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"
+                data-aos="fade-up"></iframe>
+        </section>
+    </main>
 
-        <footer class="footer">
-            <div class="redes">
-                <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"><i class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://twitter.com/LaVela_Oficial"><i class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.tiktok.com/@lavelapuercaoficial"><i class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.youtube.com/user/velapuercavideos"><i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"><i class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
-            </div>
+    <footer class="footer">
+        <div class="redes">
+            <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"><i class="fa-brands fa-facebook fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://twitter.com/LaVela_Oficial"><i class="fa-brands fa-twitter fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.tiktok.com/@lavelapuercaoficial"><i class="fa-brands fa-tiktok fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.youtube.com/user/velapuercavideos"><i class="fa-brands fa-youtube fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"><i class="fa-brands fa-spotify fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+        </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
-        </footer>
-        <!--script bootstrap-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-        <!--script aos-->
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>AOS.init();</script>
-    </body>
+    </footer>
+    <!--script bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <!--script aos-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
+</body>
+
 </html>
