--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -1,167 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
-        <!--link a bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <!--link al css-->
-        <link rel="stylesheet" href="../css/style.css">
-        <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
-        <title>Discografia</title>
-    </head>
-    <body class="body">
-        <header>
-            <div class="nav">
-                <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap"
+        rel="stylesheet">
+    <!--link a bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--link al css-->
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
+    <title>Discografia</title>
+</head>
+
+<body class="body">
+    <header>
+        <div class="nav">
+            <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
-                    <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
-                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="discografia.html">Discografía</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="galeria.html">Galería</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="shows.html">Shows</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="bio.html">Bio</a>
-                    </li>
-                </ul>
-                </div>
-                </div>
-                </div>
-                </nav>
-            </div>
-        </header>
-        <main>
-            <div class="discografiacontainergeneral">
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/1998-velapuerca-deskarado.jpg" alt="1998 Desakarado" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Deskarado 1998</p>
+                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                        aria-labelledby="offcanvasDarkNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
+                                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png"
+                                        width="40px"></a>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page"
+                                        href="discografia.html">Discografía</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="galeria.html">Galería</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="shows.html" style="color:#fbfb08">Shows</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="bio.html">Bio</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg" alt="2001 De Bichos y Flores" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>De Bichos y Flores 2001</p>
-                    </div>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="discografiacontainergeneral">
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/1998-velapuerca-deskarado.jpg" alt="1998 Desakarado" class="discografiaitems">
                 </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="2004 A Contraluz" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>A Contralux 2004</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="2007 El Impulso" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>El Impulso 2007</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="2011 Piel y Hueso" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Piel y Hueso 2011</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2013-velapuerca-pasaje-salvo.jpg" alt="2013 Pasaje Salvo" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Pasaje Salvo 2013</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2014-velapuerca-erase.jpg" alt="2014 Erase" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Erase 2014</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2018-velapuerca-destilar.jpg" alt="2018 Destilar" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Destilar 2018</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2022-velapuerca-discopatico.jpg" alt="2022 Discopatico" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Discopatico 2022</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg" alt="2009 Normalmente Anormal" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Normalmente Anormal 2009</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg" alt="2014 Uno Para Todos" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Uno para Todos 2014</p>
-                    </div>
-                </div>
-                <div class="discografiacontainer">
-                    <div>
-                        <img src="../assets/2017-velapuerca-festejar-para-sobrevivir-3.jpg" alt="2017 Festejar Para Sobrevivir" class="discografiaitems">
-                    </div>
-                    <div class="parrafos">
-                            <p>Festejar para Sobrevivir 2017</p>
-                    </div>
+                <div class="parrafos">
+                    <p>Deskarado 1998</p>
                 </div>
             </div>
-        </main>
-        <footer class="footer">
-            <div class="redes">
-                <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"><i class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://twitter.com/LaVela_Oficial"><i class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.tiktok.com/@lavelapuercaoficial"><i class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.youtube.com/user/velapuercavideos"><i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"><i class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg" alt="2001 De Bichos y Flores"
+                        class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>De Bichos y Flores 2001</p>
+                </div>
             </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="2004 A Contraluz"
+                        class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>A Contralux 2004</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="2007 El Impulso" class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>El Impulso 2007</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="2011 Piel y Hueso"
+                        class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>Piel y Hueso 2011</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2013-velapuerca-pasaje-salvo.jpg" alt="2013 Pasaje Salvo"
+                        class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>Pasaje Salvo 2013</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2014-velapuerca-erase.jpg" alt="2014 Erase" class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>Erase 2014</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2018-velapuerca-destilar.jpg" alt="2018 Destilar" class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>Destilar 2018</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2022-velapuerca-discopatico.jpg" alt="2022 Discopatico"
+                        class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>Discopatico 2022</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg" alt="2009 Normalmente Anormal"
+                        class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>Normalmente Anormal 2009</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg" alt="2014 Uno Para Todos"
+                        class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>Uno para Todos 2014</p>
+                </div>
+            </div>
+            <div class="discografiacontainer">
+                <div>
+                    <img src="../assets/2017-velapuerca-festejar-para-sobrevivir-3.jpg"
+                        alt="2017 Festejar Para Sobrevivir" class="discografiaitems">
+                </div>
+                <div class="parrafos">
+                    <p>Festejar para Sobrevivir 2017</p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="redes">
+            <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"><i class="fa-brands fa-facebook fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://twitter.com/LaVela_Oficial"><i class="fa-brands fa-twitter fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.tiktok.com/@lavelapuercaoficial"><i class="fa-brands fa-tiktok fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.youtube.com/user/velapuercavideos"><i class="fa-brands fa-youtube fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"><i class="fa-brands fa-spotify fa-xl"
+                        style="color: #ffffff;"></i></a></span>
+        </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
-        </footer>
-        <!--script bootstrap-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    </body>
+    </footer>
+    <!--script bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
