--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                         aria-labelledby="offcanvasDarkNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel"></h5>
                             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
@@ -100,29 +100,27 @@
         <div class="escuchaindex">
             <h2 class="animate__animated animate__bounceIn animate__repeat-2">Escuchá Discopatico</h2>
         </div>
-        <section class="discopaticoindex">
-            <iframe style="border-radius:12px"
-                src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0"
-                width="100%" height="400" frameBorder="10" allowfullscreen=""
+        <div class="discopaticoindex">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0" alt="Link a disco Discopatico en spotify." width="100%" height="400" frameBorder="10" allowfullscreen="100"
                 allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"
                 data-aos="fade-up"></iframe>
-        </section>
+        </div>
     </main>
 
     <footer class="footer">
         <div class="redes">
-            <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"><i class="fa-brands fa-facebook fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://twitter.com/LaVela_Oficial"><i class="fa-brands fa-twitter fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.tiktok.com/@lavelapuercaoficial"><i class="fa-brands fa-tiktok fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.youtube.com/user/velapuercavideos"><i class="fa-brands fa-youtube fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"><i class="fa-brands fa-spotify fa-xl"
-                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.instagram.com/lavela_oficial/" alt="Pagina oficial de Instagram"><i
+                        class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/" alt="Pagina oficial de Facebook"><i
+                        class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://twitter.com/LaVela_Oficial" alt="Pagina oficial de Twitter"><i
+                        class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.tiktok.com/@lavelapuercaoficial" alt="Pagina oficial de tiktok"><i
+                        class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.youtube.com/user/velapuercavideos" alt="Pagina oficial de youtube"><i
+                        class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL" alt="Link cuenta de spotify"><i
+                        class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
         </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
     </footer>
