--- a/pages/shows.html
+++ b/pages/shows.html
@@ -59,7 +59,7 @@
                     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                         aria-labelledby="offcanvasDarkNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel"></h5>
                             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
@@ -124,18 +124,18 @@
     </main>
     <footer class="footer">
         <div class="redes">
-            <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"><i class="fa-brands fa-facebook fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://twitter.com/LaVela_Oficial"><i class="fa-brands fa-twitter fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.tiktok.com/@lavelapuercaoficial"><i class="fa-brands fa-tiktok fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.youtube.com/user/velapuercavideos"><i class="fa-brands fa-youtube fa-xl"
-                        style="color: #ffffff;"></i></a></span>
-            <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"><i class="fa-brands fa-spotify fa-xl"
-                        style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.instagram.com/lavela_oficial/" alt="Pagina oficial de Instagram"><i
+                        class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/" alt="Pagina oficial de Facebook"><i
+                        class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://twitter.com/LaVela_Oficial" alt="Pagina oficial de Twitter"><i
+                        class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.tiktok.com/@lavelapuercaoficial" alt="Pagina oficial de tiktok"><i
+                        class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://www.youtube.com/user/velapuercavideos" alt="Pagina oficial de youtube"><i
+                        class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
+            <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL" alt="Link cuenta de spotify"><i
+                        class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
         </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
     </footer>
